--- a/src/main/resources/templates/adminMods.html
+++ b/src/main/resources/templates/adminMods.html
@@ -19,16 +19,27 @@
         <form role="form" th:action="@{/admin/mods/getUser}" th:method="post">
             <div class="form">
                 <h1 class="title">Adicione um moderador</h1>
-                <div class="form-control">
+                <div id="email-input" class="form-control">
                     <input type="text" name="name" id="name" placeholder="Email do moderador"/>
                 </div>
                 <div class="row white-background">
-                    <button type="submit">Vizualizar</button>
+                    <button type="submit">Visualizar</button>
                 </div>
             </div>
         </form>
 
-        <h2>Lista de moderadores</h2>
+        <div class="user-container mobile" th:if="${user}">
+            <h3>Pré-visualização do perfil buscado:</h3>
+            <div th:insert="fragments/userFragment.html :: user" class="user"></div>
+            <form role="form" th:action="@{/admin/mods/create}" th:method="post">
+                <input type="hidden" name="name" placeholder="Email do moderador" th:value="${user.getEmail()}"/>
+                <div class="row white-background">
+                    <button type="submit">Confirmar</button>
+                </div>
+            </form>
+        </div>
+
+        <h2 id="mod-text">Lista de moderadores</h2>
         <div class="moderators">
             <div class="mod-card" th:each="moderator: ${moderators}">
                 <img src="/img/user.svg" alt="Imagem de perfil">
@@ -41,11 +52,11 @@
 
     <div class="question-card-divider"></div>
     <div class="col-6">
-        <div class="user-container" th:if="${user}">
-            <p>Pré-visualização do perfil buscado:</p>
+        <div class="user-container desktop" th:if="${user}">
+            <h3>Pré-visualização do perfil buscado:</h3>
             <div th:insert="fragments/userFragment.html :: user" class="user"></div>
             <form role="form" th:action="@{/admin/mods/create}" th:method="post">
-                <input type="hidden" name="name" id="ConfirmName" placeholder="Email do moderador" th:value="${user.getEmail()}"/>
+                <input type="hidden" name="name" placeholder="Email do moderador" th:value="${user.getEmail()}"/>
                 <div class="row white-background">
                     <button type="submit">Confirmar</button>
                 </div>
