--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -37,7 +37,7 @@
     <main class="main-content">
         <div class="question-card-actions">
             <div sec:authorize="isAuthenticated()"
-                 th:if="${#authentication.getPrincipal().id==question.getUser().getId()}" class="action-icons">
+                 th:if="${#authentication.getPrincipal().id==question.getUser().getId() || #authorization.expression('hasRole(''ROLE_MODERATOR'')')}" class="action-icons">
                 <a th:href="@{/question/edit/{id}(id=${question.getId()})}"><img alt="editar"
                                                                                  th:src="@{/img/icons/lapis.svg}"/></a>
                 <a th:href="@{/question/delete/{id}(id=${question.getId()})}"><img alt="deletar"
