Fix: @Squad2 Fix do header, foto de perfil no mod e espaçamento no banner

--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -102,6 +102,10 @@
     margin-top: 20px;
 }
 
+.banner{
+    margin-top:40px;
+}
+
 @media (max-width: 630px) {
     .background {
         width: 80%;
@@ -185,7 +189,7 @@
     .profile-picture {
         width: 70px;
         height: 70px;
-        margin-right: 16px;
+        /*margin-right: 16px;*/
     }
 
     .test {
