--- a/src/main/resources/static/css/userFragment.css
+++ b/src/main/resources/static/css/userFragment.css
@@ -26,6 +26,12 @@
     color: black;
 }
 
+.img-container {
+    width: 120px;
+    height: 120px;
+    display: flex;
+}
+
 @media (max-width: 800px) {
     .profile-info-container {
         width: 100%;
