--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,7 +28,7 @@
                 <button onclick="location.href='/question/create'" class="button-green-ease">Perguntar</button>
             </div>
             <div sec:authorize="isAnonymous()">
-                <button onclick="location.href='/signup'" class="button-green-ease">Cadastrar</button>
+                <button onclick="location.href='/signin'" class="button-green-ease">Acessar</button>
             </div>
         </nav>
     </header>
