Fix: @Squad2 Adiciona categoria da pergunta na Index e ajusta o estilo

--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -362,6 +362,7 @@ hr{
 .image-name-last-access{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 @media (min-width: 481px) and (max-width: 1025px) {
