--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -210,6 +210,21 @@ button:hover{
     align-items: center;
 }
 
+.align-end{
+    display: flex;
+    align-items: end;
+}
+
+.align-self-end{
+    display: flex;
+    align-self: flex-end;
+}
+
+.align-self-center{
+    display: flex;
+    align-self: center;
+}
+
 .self-start{
     align-self: flex-start;
 }
@@ -476,10 +491,18 @@ button:hover{
 .topic-pill {
     border-radius: 5px;
     width: auto;
-    padding: 5px;
-    margin: 0 0 0 auto;
-    align-self: center;
+    padding: 5px 15px;
     text-align: center;
+    font-weight: bolder;
+    color: white;
+}
+
+.align-right{
+    margin: 0 0 0 auto;
+}
+
+.align-left{
+    margin: 0 auto 0 0;
 }
 
 .status-pill-questions small {
