--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,12 +46,17 @@
                 <div class="question-text">
                     <p th:text="${#strings.abbreviate(question.getDescription(), 200)}"></p>
                 </div>
-                <div class="question-creator">
-                    <img alt="Imagem do perfil do usuário" th:if="${question.getUser().getImage()}" th:src="${question.getUser().getImage()}"/>
-                    <img alt="Imagem do perfil do usuário" th:if="!${question.getUser().getImage()}" src="/img/user.svg"/>
-                    <div class="name-last-access">
-                        <a th:href="@{/user/{id}(id=${question.getUser().getId()})}" th:text="${question.getUser().getName()}"></a>
-                        <small th:text="${question.getCreatedAtString()}"></small>
+                <div class="row align-end">
+                    <div class="topic-pill bg-topic align-left align-self-end">
+                        <small th:text="${question.getTopic().getName()}"></small>
+                    </div>
+                    <div class="question-creator">
+                        <img alt="Imagem do perfil do usuário" th:if="${question.getUser().getImage()}" th:src="${question.getUser().getImage()}"/>
+                        <img alt="Imagem do perfil do usuário" th:if="!${question.getUser().getImage()}" src="/img/user.svg"/>
+                        <div class="name-last-access">
+                            <a th:href="@{/user/{id}(id=${question.getUser().getId()})}" th:text="${question.getUser().getName()}"></a>
+                            <small th:text="${question.getCreatedAtString()}"></small>
+                        </div>
                     </div>
                 </div>
             </div>
