--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -62,7 +62,7 @@
                         <div class="question-title">
                             <p th:text="${question.getTitle()}"></p>
                         </div>
-                        <div class="topic-pill self-end bg-topic">
+                        <div class="topic-pill bg-topic align-right align-self-center">
                             <small th:text="${topic.getName()}"></small>
                         </div>
                     </div>
