feat:06/@matheus @guilherme - Criacao de rota para marcar a melhor resposta e tentativa integrar com o front

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -125,7 +125,8 @@
                 <div sec:authorize="isAuthenticated()"
                      th:if="${#authentication.getPrincipal().id==answer.getUser().getId()}" class="action-icons">
                     <img th:onclick="|updateModal('editAnswer;${answer.getId()}')|" th:src="@{/img/icons/lapis.svg}" alt="Editar resposta"/>
-                    <a th:href="@{/answer/delete/{id}(id=${answer.getId()})}"><img alt="deletar" th:src="@{/img/icons/lixeira.svg}"/></a>
+<!--                    <a th:href="@{/answer/delete/{id}(id=${answer.getId()})}"><img alt="deletar" th:src="@{/img/icons/lixeira.svg}"/></a>-->
+                    <a th:href="@{/answer/upvote/{id}(id=${answer.getId()})}"><img alt="votar" th:src="@{/img/icons/lixeira.svg}"/></a>
                 </div>
                 <div class="answer-page-main-card">
                     <div class="answer-card-left">
