--- a/src/main/resources/static/css/question.css
+++ b/src/main/resources/static/css/question.css
@@ -113,7 +113,7 @@
     width: min-content;
     margin-left: 0.5rem;
     align-items: flex-start;
-    align-self: flex-start;
+    align-self: flex-end;
 }
 
 .action-icons-comment{
@@ -150,6 +150,18 @@
     border-radius: 10px;
     flex-direction: row;
     box-shadow: 0 0 10px 3px rgba(0,0,0,0.25);
+    margin-bottom: 1em;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.best-answer-page-main-card {
+    padding: 16px;
+    display: flex;
+    border-radius: 10px;
+    flex-direction: row;
+    border: 2px solid #53D83D;
+    box-shadow: 0 4px 5px 1px #53D83D;
     margin-bottom: 1em;
     justify-content: space-between;
     width: 100%;
@@ -318,6 +330,12 @@
     font-family: Open Sans, sans-serif;
     width: 100%;
     padding: 4px;
+}
+
+.answer-card-end {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .required-login-banner {
