--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -127,7 +127,7 @@
                     <img th:onclick="|updateModal('editAnswer;${answer.getId()}')|" th:src="@{/img/icons/lapis.svg}" alt="Editar resposta"/>
                     <a th:href="@{/answer/delete/{id}(id=${answer.getId()})}"><img alt="deletar" th:src="@{/img/icons/lixeira.svg}"/></a>
                 </div>
-                <div class="answer-page-main-card">
+                <div th:class="${answer.getIsBest()==0?'answer-page-main-card': 'best-answer-page-main-card'}">
                     <div class="answer-card-left">
                         <img alt="Imagem do perfil do usuário" th:if="${answer.getUser().getImage()}" th:src="${answer.getUser().getImage()}"/>
                         <img alt="Imagem do perfil do usuário" th:if="!${answer.getUser().getImage()}" src="/img/user.svg"/>
@@ -141,9 +141,17 @@
                             <p th:text="${answer.getText()}" th:id="'answer-' + ${answer.getId()}"></p>
                         </div>
                     </div>
-                    <div sec:authorize="isAuthenticated()"
-                         th:if="${#authentication.getPrincipal().id==question.getUser().getId()}" class="action-icons-favorite">
-                        <a th:href="@{/answer/favorite/{id}(id=${answer.getId()})}"><img alt="favoritar" th:src="@{/img/icons/best_answer_not_selected.svg}"/></a>
+                    <div class="answer-card-end">
+                        <div sec:authorize="isAuthenticated()"
+                             th:if="${#authentication.getPrincipal().id==question.getUser().getId()}" class="action-icons-favorite">
+                            <a th:href="@{/answer/favorite/{id}(id=${answer.getId()})}">
+                                <img alt="favoritar" th:if="${answer.getIsBest()==0}" th:src="@{/img/icons/best_answer_not_selected.svg}"/>
+                                <img alt="favoritar" th:if="${answer.getIsBest()==1}" th:src="@{/img/icons/best_answer.svg}"/>
+                            </a>
+                        </div>
+                        <div th:if="${answer.getIsBest()==1}" class="status-pill-questions self-end bg-answer">
+                            <small>Melhor resposta</small>
+                        </div>
                     </div>
                 </div>
             </div>
