--- a/src/main/resources/templates/templateEmail.html
+++ b/src/main/resources/templates/templateEmail.html
@@ -560,9 +560,15 @@
                         
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
                         
-                            <h3 th:text="'Ola ' + ${questionUserName}"><br>
-<br>
-Alguem respondeu sua pergunta:&nbsp;<span style="color:#FF0000"><strong th:text="${questionTitle}"></strong></span>.&nbsp;Clique aqui para acessar o site.</h3>
+                            <h3 th:text="'Ola ' + ${userName}"></h3>
+                                <br>
+                                <br>
+                            <h3 th:text="${emailText}">
+                            </h3>
+                            <h3>
+                                <span style="color:#FF0000"><strong th:text="${questionTitle}"></strong></span>
+                                Clique aqui para acessar o site.
+                            </h3>
 
                         </td>
                     </tr>
@@ -586,7 +592,7 @@ Alguem respondeu sua pergunta:&nbsp;<span style="color:#FF0000"><strong th:text=
                     <tbody>
                         <tr>
                             <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Helvetica; font-size: 18px; padding: 18px;">
-                                <a class="mcnButton " title="Vá para o site" href="" target="_blank" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Vá para o site</a>
+                                <a class="mcnButton " title="Vá para o site" th:href="${questionUrl}" target="_blank" style="font-weight: bold;letter-spacing: -0.5px;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;">Va para a sua pergunta</a>
                             </td>
                         </tr>
                     </tbody>
